Fix T43421: bisect_edges returns insufficient data